--- a/ref.bib
+++ b/ref.bib
@@ -473,8 +473,9 @@ ADS Bibcode: 1959cbs..book.....K},
 	date = {2008-11-01},
 	note = {Publisher: {IOP}
 {ADS} Bibcode: 2008ApJ...687..542P},
-	keywords = {Astrophysics, binaries: eclipsing, methods: data analysis, methods: numerical, stars: fundamental parameters}
+	keywords = {Astrophysics, methods: data analysis, binaries: eclipsing, methods: numerical, stars: fundamental parameters}
 }
+
 
 @article{prsa_phoebe_increased_model_fidelity_mesh_2016,
 	title = {Physics Of Eclipsing Binaries. {II}. Toward the Increased Model Fidelity},
@@ -509,16 +510,6 @@ ADS Bibcode: 1959cbs..book.....K},
 	date = {2012-06},
 	langid = {english},
 	note = {Publisher: The American Astronomical Society}
-}
-
-@article{understandingLombScargle,
-  AUTHOR          = {Jacob T. VanderPlas},
-  JOURNAL         = {The Astrophysical Journal Supplement Series},
-  NUMBER          = {},
-  TITLE           = {Understanding the Lomb-Scargle Periodogram},
-  VOLUME          = {},
-  month           = {3},
-  YEAR            = {2017}
 }
 
 @MISC{gdr3ReleaseDocumentation,
@@ -610,4 +601,55 @@ ADS Bibcode: 1959cbs..book.....K},
 	keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
 	pages = {1782--1800},
 	annote = {Comment: submitted to AJ}
+}
+@article{kovacs_bls_periodogram_periodic_transits_2002,
+	title = {A box-fitting algorithm in the search for periodic transits},
+	volume = {391},
+	issn = {0004-6361, 1432-0746},
+	url = {http://arxiv.org/abs/astro-ph/0206099},
+	doi = {10.1051/0004-6361:20020802},
+	abstract = {We study the statistical characteristics of a box-fitting algorithm to analyze stellar photometric time series in the search for periodic transits by extrasolar planets. The algorithm searches for signals characterized by a periodic alternation between two discrete levels, with much less time spent at the lower level. We present numerical as well as analytical results to predict the possible detection significance at various signal parameters. It is shown that the crucial parameter is the effective signal-to-noise ratio -- the expected depth of the transit divided by the standard deviation of the measured photometric average within the transit. When this parameter exceeds the value of 6 we can expect a significant detection of the transit. We show that the box-fitting algorithm performs better than other methods available in the astronomical literature, especially for low signal-to-noise ratios.},
+	pages = {369--377},
+	number = {1},
+	journaltitle = {Astronomy \& Astrophysics},
+	shortjournal = {A\&A},
+	author = {Kovács, G. and Zucker, S. and Mazeh, T.},
+	urldate = {2024-05-20},
+	date = {2002-08},
+	eprinttype = {arxiv},
+	eprint = {astro-ph/0206099},
+	keywords = {Astrophysics}
+}
+
+@article{vanderplas_understanding_lomb_scargle_periodogram_2018,
+	title = {Understanding the Lomb–Scargle Periodogram},
+	volume = {236},
+	issn = {0067-0049},
+	url = {https://dx.doi.org/10.3847/1538-4365/aab766},
+	doi = {10.3847/1538-4365/aab766},
+	abstract = {The Lomb–Scargle periodogram is a well-known algorithm for detecting and characterizing periodic signals in unevenly sampled data. This paper presents a conceptual introduction to the Lomb–Scargle periodogram and important practical considerations for its use. Rather than a rigorous mathematical treatment, the goal of this paper is to build intuition about what assumptions are implicit in the use of the Lomb–Scargle periodogram and related estimators of periodicity, so as to motivate important practical considerations required in its proper application and interpretation.},
+	pages = {16},
+	number = {1},
+	journaltitle = {The Astrophysical Journal Supplement Series},
+	shortjournal = {{ApJS}},
+	author = {{VanderPlas}, Jacob T.},
+	urldate = {2024-05-20},
+	date = {2018-05},
+	langid = {english},
+	note = {Publisher: The American Astronomical Society}
+}
+
+@article{pedregosa_scikit-learn_2011,
+	title = {Scikit-learn: Machine Learning in Python},
+	volume = {12},
+	issn = {1533-7928},
+	url = {http://jmlr.org/papers/v12/pedregosa11a.html},
+	shorttitle = {Scikit-learn},
+	abstract = {Scikit-learn is a Python module integrating a wide range of state-of-the-art machine learning algorithms for medium-scale supervised and unsupervised problems. This package focuses on bringing machine learning to non-specialists using a general-purpose high-level language. Emphasis is put on ease of use, performance, documentation, and {API} consistency. It has minimal dependencies and is distributed under the simplified {BSD} license, encouraging its use in both academic and commercial settings. Source code, binaries, and documentation can be downloaded from http://scikit-learn.sourceforge.net.},
+	pages = {2825--2830},
+	number = {85},
+	journaltitle = {Journal of Machine Learning Research},
+	author = {Pedregosa, Fabian and Varoquaux, Gaël and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, Édouard},
+	urldate = {2024-05-08},
+	date = {2011}
 }
