--- a/Tesis.tex
+++ b/Tesis.tex
@@ -138,8 +138,10 @@
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
 \definecolor{codeblue}{rgb}{0, 0.2, 0.8}
+\definecolor{codegold}{RGB}{198, 152, 82}
 \definecolor{backcolour}{rgb}{0.97, 0.97, 0.97}
-\definecolor{bookColor}{cmyk}{0, 0, 0, 0.90}  
+
+\definecolor{bookColor}{cmyk}{0, 0, 0, 0.90}
 \color{bookColor}
 
 \lstset{upquote=true}
@@ -149,7 +151,7 @@
     commentstyle=\color{codegreen},
     keywordstyle=\color{codeblue},
     numberstyle=\numberstyle,
-    stringstyle=\color{codeblue},
+    stringstyle=\color{codegold},
     basicstyle=\footnotesize\ttfamily,
     breakatwhitespace=false,
     breaklines=true,
@@ -162,6 +164,7 @@
     showspaces=false,
     showstringspaces=false,
     showtabs=false,
+    tabsize=2
 }
 \lstset{style=mystyle}
 
@@ -183,7 +186,7 @@
 \newcommand{\R}{\textsf{R}}
 \newcommand{\Fortran}{\textsf{Fortran}}
 
-\newcommand{\comment}[1]{}
+% \newcommand{\comment}[1]{}
 \newcommand{\gaiaNoSpace}{\textit{Gaia}}
 \newcommand{\atoObjIdNoSpace}{ATO J339.9469+45.1464}
 \newcommand{\atoObjId}{\atoObjIdNoSpace \space}
@@ -193,6 +196,17 @@
 \newcommand{\quotes}[1]{``#1''}
 \newcommand{\code}[1]{\texttt{#1}}
 \newcommand{\brakcite}[1]{[\autocite{#1}]}
+
+% \newcommand{\pythonblock}[1]{
+%     \begin{lstlisting}[ language=Python,
+%         framesep=6pt,
+%         xleftmargin=6pt,
+%         framexleftmargin=6pt,
+%         frame=tb,
+%         framerule=0pt ]
+%         #1
+%     \end{lstlisting}
+% }
 
 % https://tex.stackexchange.com/questions/11031/how-to-do-the-curvy-l-for-lagrangian-or-laplace-transforms#11144
 \newcommand{\Lagr}{\mathcal{L}}
