Added sections on the PHOEBE bundle structure and parameter optimizers Modified formatting for code excerpts

--- a/Apendice/GaiaADQL.tex
+++ b/Apendice/GaiaADQL.tex
@@ -5,11 +5,7 @@
 	deletekeywords={IDENTITY},
 	deletekeywords={[2]INT},
 	morekeywords={clustered, Power},
-	framesep=6pt,
-	xleftmargin=6pt,
-	framexleftmargin=6pt,
-	frame=tb,
-	framerule=0pt ]
+	autogobble ]
 SELECT *, 
 	array_element(a0, 1) AS J2000_ra_prop,
 	array_element(a0, 2) AS J2000_dec_prop,
@@ -45,11 +41,7 @@ WHERE sdss_transform.g_sdss - sdss_transform.r_sdss < 0.7 AND sdss_transform.r_s
 	deletekeywords={IDENTITY},
 	deletekeywords={[2]INT},
 	morekeywords={clustered, Power},
-	framesep=8pt,
-	xleftmargin=8pt,
-	framexleftmargin=8pt,
-	frame=tb,
-	framerule=0pt ]
+	autogobble ]
 SELECT TOP 3630000 * ,
 	array_element (sdss_transform.a0 , 1) AS J2000_ra_prop,
 	array_element (sdss_transform.a0 , 2) AS J2000_dec_prop,
