--- a/ref.bib
+++ b/ref.bib
@@ -653,3 +653,19 @@ ADS Bibcode: 1959cbs..book.....K},
 	urldate = {2024-05-08},
 	date = {2011}
 }
+
+@article{nelder_mead_simplex_1965,
+	title = {A Simplex Method for Function Minimization},
+	volume = {7},
+	issn = {0010-4620},
+	url = {https://doi.org/10.1093/comjnl/7.4.308},
+	doi = {10.1093/comjnl/7.4.308},
+	abstract = {A method is described for the minimization of a function of n variables, which depends on the comparison of function values at the (n + 1) vertices of a general simplex, followed by the replacement of the vertex with the highest value by another point. The simplex adapts itself to the local landscape, and contracts on to the final minimum. The method is shown to be effective and computationally compact. A procedure is given for the estimation of the Hessian matrix in the neighbourhood of the minimum, needed in statistical estimation problems.},
+	pages = {308--313},
+	number = {4},
+	journaltitle = {The Computer Journal},
+	shortjournal = {The Computer Journal},
+	author = {Nelder, J. A. and Mead, R.},
+	urldate = {2024-05-31},
+	date = {1965-01-01}
+}
